--- a/src/app/modules/tienda-guest/landing-course/landing-course.component.html
+++ b/src/app/modules/tienda-guest/landing-course/landing-course.component.html
@@ -1,5 +1,5 @@
 <!-- Start breadcrumb Area -->
-<div class="rbt-breadcrumb-default rbt-breadcrumb-style-3">
+<div class="rbt-breadcrumb-default rbt-breadcrumb-style-3" *ngIf="course">
   <div class="breadcrumb-inner">
     <img src="assets/images/bg/bg-image-10.jpg" alt="Education Images" />
   </div>
@@ -14,12 +14,13 @@
                 <i class="feather-chevron-right"></i>
               </div>
             </li>
-            <li class="rbt-breadcrumb-item active">Web Development</li>
+            <li class="rbt-breadcrumb-item active">
+              {{ course.categorie.title }}
+            </li>
           </ul>
-          <h2 class="title">The Complete Histudy 2022: From Zero to Expert!</h2>
+          <h2 class="title">{{ course.title }}</h2>
           <p class="description">
-            Master Python by building 100 projects in 100 days. Learn data
-            science, automation, build websites, games and apps!
+            {{ course.subtitle }}
           </p>
 
           <div
@@ -57,15 +58,12 @@
           <div class="rbt-author-meta mb--20">
             <div class="rbt-avater">
               <a href="#">
-                <img
-                  src="assets/images/client/avatar-02.png"
-                  alt="Sophia Jaymes"
-                />
+                <img [src]="course.user.avatar" alt="course.user.name" />
               </a>
             </div>
             <div class="rbt-author-info">
-              By <a href="profile.html">Angela</a> In
-              <a href="#">Development</a>
+              By <a href="profile.html">{{ course.user.name }}</a> In
+              <a href="#">{{ course.user.profession }}</a>
             </div>
           </div>
 
@@ -81,17 +79,13 @@
 </div>
 <!-- End Breadcrumb Area -->
 
-<div class="rbt-course-details-area ptb--60">
+<div class="rbt-course-details-area ptb--60" *ngIf="course">
   <div class="container">
     <div class="row g-5">
       <div class="col-lg-8">
         <div class="course-details-content">
           <div class="rbt-course-feature-box rbt-shadow-box thuumbnail">
-            <img
-              class="w-100"
-              src="assets/images/course/course-01.jpg"
-              alt="Card image"
-            />
+            <img class="w-100" [src]="course.image" alt="image" />
           </div>
 
           <div class="rbt-inner-onepage-navigation sticky-top mt--30">
@@ -121,82 +115,10 @@
             class="rbt-course-feature-box overview-wrapper rbt-shadow-box mt--30 has-show-more"
             id="overview"
           >
-            <div class="rbt-course-feature-inner has-show-more-inner-content">
-              <div class="section-title">
-                <h4 class="rbt-title-style-3">What you'll learn</h4>
-              </div>
-              <p>
-                Are you new to PHP or need a refresher? Then this course will
-                help you get all the fundamentals of Procedural PHP, Object
-                Oriented PHP, MYSQLi and ending the course by building a CMS
-                system similar to WordPress, Joomla or Drupal. Knowing PHP has
-                allowed me to make enough money to stay home and make courses
-                like this one for students all over the world.
-              </p>
-
-              <div class="row g-5 mb--30">
-                <!-- Start Feture Box  -->
-                <div class="col-lg-6">
-                  <ul class="rbt-list-style-1">
-                    <li>
-                      <i class="feather-check"></i>Become an advanced,
-                      confident, and modern JavaScript developer from scratch.
-                    </li>
-                    <li>
-                      <i class="feather-check"></i>Have an intermediate skill
-                      level of Python programming.
-                    </li>
-                    <li>
-                      <i class="feather-check"></i>Have a portfolio of various
-                      data analysis projects.
-                    </li>
-                    <li>
-                      <i class="feather-check"></i>Use the numpy library to
-                      create and manipulate arrays.
-                    </li>
-                  </ul>
-                </div>
-                <!-- End Feture Box  -->
-
-                <!-- Start Feture Box  -->
-                <div class="col-lg-6">
-                  <ul class="rbt-list-style-1">
-                    <li>
-                      <i class="feather-check"></i>Use the Jupyter Notebook
-                      Environment. JavaScript developer from scratch.
-                    </li>
-                    <li>
-                      <i class="feather-check"></i>Use the pandas module with
-                      Python to create and structure data.
-                    </li>
-                    <li>
-                      <i class="feather-check"></i>Have a portfolio of various
-                      data analysis projects.
-                    </li>
-                    <li>
-                      <i class="feather-check"></i>Create data visualizations
-                      using matplotlib and the seaborn.
-                    </li>
-                  </ul>
-                </div>
-                <!-- End Feture Box  -->
-              </div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis,
-                aliquam voluptas laudantium incidunt architecto nam excepturi
-                provident rem laborum repellendus placeat neque aut doloremque
-                ut ullam, veritatis nesciunt iusto officia alias, non est vitae.
-                Eius repudiandae optio quam alias aperiam nemo nam tempora,
-                dignissimos dicta excepturi ea quo ipsum omnis maiores
-                perferendis commodi voluptatum facere vel vero. Praesentium
-                quisquam iure veritatis, perferendis adipisci sequi blanditiis
-                quidem porro eligendi fugiat facilis inventore amet delectus
-                expedita deserunt ut molestiae modi laudantium, quia tenetur
-                animi natus ea. Molestiae molestias ducimus pariatur et
-                consectetur. Error vero, eum soluta delectus necessitatibus
-                eligendi numquam hic at?
-              </p>
-            </div>
+            <div
+              class="rbt-course-feature-inner has-show-more-inner-content"
+              [innerHTML]="course.description"
+            ></div>
             <div class="rbt-show-more-btn">Show More</div>
           </div>
           <!-- End Course Feature Box  -->
@@ -756,23 +678,11 @@
                 <div class="section-title">
                   <h4 class="rbt-title-style-3 mb--20">Requirements</h4>
                 </div>
+
                 <ul class="rbt-list-style-1">
-                  <li>
-                    <i class="feather-check"></i>Become an advanced, confident,
-                    and modern JavaScript developer from scratch.
-                  </li>
-                  <li>
-                    <i class="feather-check"></i>Have an intermediate skill
-                    level of Python programming.
-                  </li>
-                  <li>
-                    <i class="feather-check"></i>Have a portfolio of various
-                    data analysis projects.
-                  </li>
-                  <li>
-                    <i class="feather-check"></i>Use the numpy library to create
-                    and manipulate arrays.
-                  </li>
+                  <ng-container *ngFor="let requirement of course.requirements">
+                    <li><i class="feather-check"></i>{{ requirement }}</li>
+                  </ng-container>
                 </ul>
               </div>
               <!-- End Feture Box  -->
@@ -780,25 +690,12 @@
               <!-- Start Feture Box  -->
               <div class="col-lg-6">
                 <div class="section-title">
-                  <h4 class="rbt-title-style-3 mb--20">Description</h4>
+                  <h4 class="rbt-title-style-3 mb--20">Who is it for?</h4>
                 </div>
                 <ul class="rbt-list-style-1">
-                  <li>
-                    <i class="feather-check"></i>Use the Jupyter Notebook
-                    Environment. JavaScript developer from scratch.
-                  </li>
-                  <li>
-                    <i class="feather-check"></i>Use the pandas module with
-                    Python to create and structure data.
-                  </li>
-                  <li>
-                    <i class="feather-check"></i>Have a portfolio of various
-                    data analysis projects.
-                  </li>
-                  <li>
-                    <i class="feather-check"></i>Create data visualizations
-                    using matplotlib and the seaborn.
-                  </li>
+                  <ng-container *ngFor="let who_is of course.who_is_it_for">
+                    <li><i class="feather-check"></i>{{ who_is }}</li>
+                  </ng-container>
                 </ul>
               </div>
               <!-- End Feture Box  -->
@@ -818,20 +715,19 @@
               <div class="media align-items-center">
                 <div class="thumbnail">
                   <a href="#">
-                    <img
-                      src="assets/images/testimonial/testimonial-7.jpg"
-                      alt="Author Images"
-                    />
+                    <img [src]="course.user.avatar" alt="Author Images" />
                   </a>
                 </div>
                 <div class="media-body">
                   <div class="author-info">
                     <h5 class="title">
-                      <a class="hover-flip-item-wrapper" href="author.html"
-                        >B.M. Rafekul Islam</a
-                      >
+                      <a class="hover-flip-item-wrapper" href="author.html">{{
+                        course.user.name + " " + course.user.surname
+                      }}</a>
                     </h5>
-                    <span class="b3 subtitle">Advanced Educator</span>
+                    <span class="b3 subtitle">{{
+                      course.user.profession
+                    }}</span>
                     <ul class="rbt-meta mb--20 mt--10">
                       <li>
                         <i class="fa fa-star color-warning"></i>75,237 Reviews
@@ -839,14 +735,16 @@
                       </li>
                       <li><i class="feather-users"></i>912,970 Students</li>
                       <li>
-                        <a href="#"><i class="feather-video"></i>16 Courses</a>
+                        <a href="#"
+                          ><i class="feather-video"></i
+                          >{{ course.user.count_course }} Courses</a
+                        >
                       </li>
                     </ul>
                   </div>
                   <div class="content">
                     <p class="description">
-                      John is a brilliant educator, whose life was spent for
-                      computer science and love of nature.
+                      {{ course.user.description }}
                     </p>
 
                     <ul
